<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/default_margin"
        android:paddingEnd="@dimen/default_margin"
        tools:context=".ui.form.FormFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_number_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintBottom_toTopOf="@id/second_number_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_number_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_number_input_layout_hint"
                android:inputType="number"
                android:lines="1"
                android:maxLength="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/second_number_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintBottom_toTopOf="@id/limit_number_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_number_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/second_number_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/second_number_input_layout_hint"
                android:inputType="number"
                android:lines="1"
                android:maxLength="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/limit_number_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintBottom_toTopOf="@id/fizz_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second_number_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/limit_number_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/limit_input_layout_hint"
                android:inputType="number"
                android:lines="1"
                android:maxLength="9" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fizz_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintBottom_toTopOf="@id/buzz_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/limit_number_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fizz_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_message_hint"
                android:inputType="text"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/buzz_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintBottom_toTopOf="@id/validate_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fizz_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/buzz_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/second_message_hint"
                android:inputType="text"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/validate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_result"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buzz_input_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
